--- a/src/App.css
+++ b/src/App.css
@@ -3,13 +3,40 @@
   font-optical-sizing: auto;
   font-style: normal;
 }
+hr{
+  color: gray;
+  opacity: 0.4;
+}
 
 .quiz__welcome{
   width: fit-content;
   margin: 0 auto;
-  text-align: center;
+  max-width: 1000px;
+}
+.quiz__welcome__form{
+  display: flex;
+  flex-direction: column;
+  max-width: 800px;
 }
 
+.quiz__welcome__form--container{
+  display: flex;
+  justify-content: space-between;
+  margin: 8px 0px;
+}
+
+.quiz__welcome__form--container div label{
+  margin-right: 12px;
+  font-weight: 600;
+}
+
+.quiz__welcome__form--container div input{
+  height: 23px;
+}
+
+.quiz__welcome__block{
+  margin: 28px 0px;
+}
 
 .quiz__container{
   width: 90%;
